templates/migration/envoy-gateway/http-redirect.yaml
---
# Catch-all HTTP -> HTTPS redirect for all hostnames
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "40"
spec:
  parentRefs:
    - name: eg
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
